test/langtools/tools/javac/Diagnostics/8043251/T8043251.out
T8043251.java:9:42: compiler.err.cant.apply.symbol.noargs: kindname.method, identity, java.util.function.Function<T,R>, (compiler.misc.wrong.number.type.args: 1)
1 error
